--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,13 +12,24 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
-            android:theme="@style/Theme.Momadu.NoActionBar">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+            android:theme="@style/Theme.Momadu.NoActionBar"/>
+        <activity
+            android:name=".FirstPageActivity"
+            android:parentActivityName=".MainActivity" >
+        <intent-filter>
+            <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            <category android:name="android.intent.category.LAUNCHER" />
+        </intent-filter>
         </activity>
+        <activity
+            android:name=".ui.slideshow.FinanceExpense"
+            android:label="@string/finance_expense_name"
+            android:parentActivityName=".MainActivity" />
+        <activity
+            android:name=".ui.slideshow.FinanceIncome"
+            android:label="@string/finance_income_name"
+            android:parentActivityName=".MainActivity" />
     </application>
 
 </manifest>
